crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaAds1115 PamojaAds1115;
typedef struct PamojaDs18b20Thermometer PamojaDs18b20Thermometer;
typedef struct PamojaDs18b20Thermometers PamojaDs18b20Thermometers;
typedef struct PamojaI2cBus PamojaI2cBus;
typedef struct PamojaI2cPart PamojaI2cPart;
typedef struct PamojaIna219 PamojaIna219;
typedef struct PamojaIna226 PamojaIna226;
typedef struct PamojaScd4x PamojaScd4x;
typedef struct PamojaSht3x PamojaSht3x;
typedef struct PamojaString PamojaString;
typedef struct {
  int16_t raw_temperature;
  int32_t micro_celsius;
  int8_t alarm_high;
  int8_t alarm_low;
  uint8_t resolution_bits;
} PamojaDs18b20Reading;
typedef struct {
  uint8_t start_conversion;
  uint8_t mux;
  uint8_t pga;
  uint8_t single_shot;
  uint8_t data_rate;
  uint8_t window_comparator;
  uint8_t comparator_active_high;
  uint8_t comparator_latching;
  uint8_t comparator_queue;
} PamojaAds1115Config;
typedef struct {
  uint16_t temperature_raw;
  uint16_t humidity_raw;
  int32_t milli_celsius;
  float celsius;
  int32_t milli_fahrenheit;
  float fahrenheit;
  uint32_t milli_percent;
  float relative_humidity;
} PamojaSht3xMeasurement;
typedef struct {
  uint16_t bits;
  uint8_t alert_pending;
  uint8_t heater_on;
  uint8_t humidity_tracking_alert;
  uint8_t temperature_tracking_alert;
  uint8_t reset_detected;
  uint8_t command_failed;
  uint8_t write_checksum_failed;
} PamojaSht3xStatus;
typedef struct {
  uint16_t co2_ppm;
  uint16_t temperature_raw;
  uint16_t humidity_raw;
  int32_t milli_celsius;
  float celsius;
  uint32_t humidity_milli_percent;
  float relative_humidity_percent;
} PamojaScd4xMeasurement;
typedef struct {
  uint8_t reset;
  uint8_t averaging;
  uint8_t bus_conversion_time;
  uint8_t shunt_conversion_time;
  uint8_t mode;
} PamojaIna226Config;
typedef struct {
  uint8_t shunt_over_limit;
  uint8_t shunt_under_limit;
  uint8_t bus_over_limit;
  uint8_t bus_under_limit;
  uint8_t power_over_limit;
  uint8_t conversion_ready;
  uint8_t alert_function_flag;
  uint8_t conversion_ready_flag;
  uint8_t math_overflow;
  uint8_t alert_active_high;
  uint8_t alert_latch;
} PamojaIna226MaskEnable;
typedef struct {
  uint16_t device;
  uint8_t revision;
} PamojaIna226DieId;
typedef struct {
  uint32_t shunt_milliohms;
  uint32_t max_microamps;
  uint32_t current_lsb_microamps;
  PamojaIna226Config config;
} PamojaIna226Settings;
typedef struct {
  int16_t shunt;
  uint16_t bus;
  int16_t current;
  uint16_t power;
  uint32_t current_lsb_microamps;
  int32_t shunt_nanovolts;
  float shunt_millivolts;
  uint32_t bus_microvolts;
  float bus_volts;
  int32_t current_microamps;
  float current_amps;
  uint32_t power_microwatts;
  float power_watts;
  uint8_t math_overflow;
} PamojaIna226Reading;
typedef struct {
  uint8_t mux;
  uint8_t pga;
  uint8_t data_rate;
} PamojaAds1115Settings;
typedef struct {
  int16_t raw;
  uint8_t pga;
  int64_t nanovolts;
  float volts;
  uint8_t clipped;
} PamojaAds1115Sample;
uint16_t pamoja_ina219_calibration_word(const PamojaIna219 *sensor);
void pamoja_ina219_free(PamojaIna219 *sensor);
PamojaI2cPart *pamoja_ina219_sim_part(uint8_t address);
PamojaI2cPart *pamoja_ina219_sim_reporting(uint8_t address,
                                           uint32_t shunt_milliohms,
                                           uint32_t max_microamps,
                                           uint32_t bus_millivolts,
                                           int32_t microamps);
PamojaIna226Settings pamoja_ina226_settings_default(void);
PamojaStatus pamoja_ina226_new(const PamojaI2cBus *bus,
                               uint8_t address,
                               PamojaIna226Settings settings,
                               PamojaIna226 **out_sensor);
PamojaStatus pamoja_ina226_init(PamojaIna226 *sensor);
PamojaStatus pamoja_ina226_measure(PamojaIna226 *sensor, PamojaIna226Reading *out_reading);
PamojaStatus pamoja_ina226_set_alert(PamojaIna226 *sensor,
                                     PamojaIna226MaskEnable mask,
                                     uint16_t limit);
uint32_t pamoja_ina226_current_lsb(const PamojaIna226 *sensor);
uint16_t pamoja_ina226_calibration_word(const PamojaIna226 *sensor);
bool pamoja_ina226_identity(const PamojaIna226 *sensor, PamojaIna226DieId *out_die_id);
void pamoja_ina226_free(PamojaIna226 *sensor);
PamojaI2cPart *pamoja_ina226_sim_part(uint8_t address);
PamojaI2cPart *pamoja_ina226_sim_reporting(uint8_t address,
                                           uint32_t shunt_milliohms,
                                           uint32_t max_microamps,
                                           uint32_t bus_microvolts,
                                           int32_t microamps);
PamojaAds1115Settings pamoja_ads1115_settings_default(void);
PamojaStatus pamoja_ads1115_new(const PamojaI2cBus *bus,
                                uint8_t address,
                                PamojaAds1115Settings settings,
                                PamojaAds1115 **out_sensor);
PamojaStatus pamoja_ads1115_init(PamojaAds1115 *sensor);
PamojaStatus pamoja_ads1115_sample(PamojaAds1115 *sensor, PamojaAds1115Sample *out_sample);
PamojaStatus pamoja_ads1115_sample_input(PamojaAds1115 *sensor,
                                         uint8_t mux,
                                         PamojaAds1115Sample *out_sample);
PamojaStatus pamoja_ads1115_config(const PamojaAds1115 *sensor, PamojaAds1115Config *out_config);
void pamoja_ads1115_free(PamojaAds1115 *sensor);
PamojaI2cPart *pamoja_ads1115_sim_part(uint8_t address);
PamojaI2cPart *pamoja_ads1115_sim_reporting(uint8_t address, uint8_t pga, float volts);
PamojaStatus pamoja_sht3x_new(const PamojaI2cBus *bus,
                              uint8_t address,
                              uint8_t repeatability,
                              PamojaSht3x **out_sensor);
PamojaStatus pamoja_sht3x_init(PamojaSht3x *sensor);
PamojaStatus pamoja_sht3x_measure(PamojaSht3x *sensor, PamojaSht3xMeasurement *out_measurement);
PamojaStatus pamoja_sht3x_read_status(PamojaSht3x *sensor, PamojaSht3xStatus *out_status);
bool pamoja_sht3x_last_status(const PamojaSht3x *sensor, PamojaSht3xStatus *out_status);
PamojaStatus pamoja_sht3x_heater_on(PamojaSht3x *sensor);
PamojaStatus pamoja_sht3x_heater_off(PamojaSht3x *sensor);
void pamoja_sht3x_free(PamojaSht3x *sensor);
PamojaI2cPart *pamoja_sht3x_sim_part(uint8_t address);
PamojaI2cPart *pamoja_sht3x_sim_reporting(uint8_t address, float celsius, float relative_humidity);
PamojaStatus pamoja_scd4x_new(const PamojaI2cBus *bus, PamojaScd4x **out_sensor);
PamojaStatus pamoja_scd4x_init(PamojaScd4x *sensor);
PamojaStatus pamoja_scd4x_measure(PamojaScd4x *sensor, PamojaScd4xMeasurement *out_measurement);
PamojaStatus pamoja_scd4x_measure_single_shot(PamojaScd4x *sensor,
                                              PamojaScd4xMeasurement *out_measurement);
PamojaStatus pamoja_scd4x_poll_ready(PamojaScd4x *sensor, bool *out_ready);
PamojaStatus pamoja_scd4x_stop(PamojaScd4x *sensor);
PamojaStatus pamoja_scd4x_start(PamojaScd4x *sensor);
PamojaStatus pamoja_scd4x_set_temperature_offset(PamojaScd4x *sensor, uint32_t milli_celsius);
PamojaStatus pamoja_scd4x_set_sensor_altitude(PamojaScd4x *sensor, uint16_t meters);
bool pamoja_scd4x_serial(const PamojaScd4x *sensor, uint64_t *out_serial);
void pamoja_scd4x_free(PamojaScd4x *sensor);
PamojaI2cPart *pamoja_scd4x_sim_part(void);
PamojaI2cPart *pamoja_scd4x_sim_reporting(uint16_t co2_ppm, float celsius, float relative_humidity);
PamojaStatus pamoja_ds18b20_thermometer_new(const char *serial,
                                            PamojaDs18b20Thermometer **out_thermometer);
PamojaStatus pamoja_ds18b20_thermometer_at(const char *path,
                                           PamojaDs18b20Thermometer **out_thermometer);
PamojaString *pamoja_ds18b20_thermometer_path(const PamojaDs18b20Thermometer *thermometer);
PamojaString *pamoja_ds18b20_thermometer_serial(const PamojaDs18b20Thermometer *thermometer);
PamojaStatus pamoja_ds18b20_thermometer_read(const PamojaDs18b20Thermometer *thermometer,
                                             PamojaDs18b20Reading *out_reading);
void pamoja_ds18b20_thermometer_free(PamojaDs18b20Thermometer *thermometer);
PamojaStatus pamoja_ds18b20_discover(const char *devices,
                                     PamojaDs18b20Thermometers **out_thermometers);
uintptr_t pamoja_ds18b20_thermometers_len(const PamojaDs18b20Thermometers *thermometers);
PamojaDs18b20Thermometer *pamoja_ds18b20_thermometers_get(const PamojaDs18b20Thermometers *thermometers,
                                                          uintptr_t index);