bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.SensorDrivers.cs


    /// <summary>Returns the calibration word an INA219 driver programs.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina219_calibration_word(IntPtr sensor);

    /// <summary>Releases an INA219 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ina219_free(IntPtr sensor);

    /// <summary>Creates a simulated INA219 carrying its default load.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ina219_sim_part(byte address);

    /// <summary>Creates a simulated INA219 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ina219_sim_reporting(
        byte address,
        uint shuntMilliohms,
        uint maxMicroamps,
        uint busMillivolts,
        int microamps);

    /// <summary>Returns the settings an INA226 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaIna226Settings pamoja_ina226_settings_default();

    /// <summary>Creates an INA226 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_new(
        IntPtr bus,
        byte address,
        PamojaIna226Settings settings,
        out IntPtr outSensor);

    /// <summary>Resets, identifies, configures, and calibrates an INA226.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_init(IntPtr sensor);

    /// <summary>Runs one INA226 conversion and reads every result.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_measure(IntPtr sensor, out PamojaIna226Reading outReading);

    /// <summary>Programs the INA226's alert pin.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_set_alert(IntPtr sensor, PamojaIna226MaskEnable mask, ushort limit);

    /// <summary>Returns the current step an INA226 driver programs.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_current_lsb(IntPtr sensor);

    /// <summary>Returns the calibration word an INA226 driver programs.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_calibration_word(IntPtr sensor);

    /// <summary>Reports the die id an INA226 driver read at initialization.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_ina226_identity(IntPtr sensor, out PamojaIna226DieId outDieId);

    /// <summary>Releases an INA226 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ina226_free(IntPtr sensor);

    /// <summary>Creates a simulated INA226 carrying its default load.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ina226_sim_part(byte address);

    /// <summary>Creates a simulated INA226 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ina226_sim_reporting(
        byte address,
        uint shuntMilliohms,
        uint maxMicroamps,
        uint busMicrovolts,
        int microamps);

    /// <summary>Returns the settings an ADS1115 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaAds1115Settings pamoja_ads1115_settings_default();

    /// <summary>Creates an ADS1115 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ads1115_new(
        IntPtr bus,
        byte address,
        PamojaAds1115Settings settings,
        out IntPtr outSensor);

    /// <summary>Configures an ADS1115 and reads the configuration back.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ads1115_init(IntPtr sensor);

    /// <summary>Runs one ADS1115 conversion of the configured input.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ads1115_sample(IntPtr sensor, out PamojaAds1115Sample outSample);

    /// <summary>Runs one ADS1115 conversion of another input.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ads1115_sample_input(IntPtr sensor, byte mux, out PamojaAds1115Sample outSample);

    /// <summary>Copies the configuration an ADS1115 driver writes.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ads1115_config(IntPtr sensor, out PamojaAds1115Config outConfig);

    /// <summary>Releases an ADS1115 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ads1115_free(IntPtr sensor);

    /// <summary>Creates a simulated ADS1115 reading its default voltage.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ads1115_sim_part(byte address);

    /// <summary>Creates a simulated ADS1115 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ads1115_sim_reporting(byte address, byte pga, float volts);

    /// <summary>Creates an SHT3x driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_new(IntPtr bus, byte address, byte repeatability, out IntPtr outSensor);

    /// <summary>Resets an SHT3x and reads its status.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_init(IntPtr sensor);

    /// <summary>Runs one SHT3x single-shot measurement.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_measure(IntPtr sensor, out PamojaSht3xMeasurement outMeasurement);

    /// <summary>Reads the SHT3x status register.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_read_status(IntPtr sensor, out PamojaSht3xStatus outStatus);

    /// <summary>Reports the status an SHT3x driver last read.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_sht3x_last_status(IntPtr sensor, out PamojaSht3xStatus outStatus);

    /// <summary>Switches the SHT3x heater on.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_heater_on(IntPtr sensor);

    /// <summary>Switches the SHT3x heater off.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_heater_off(IntPtr sensor);

    /// <summary>Releases an SHT3x driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_sht3x_free(IntPtr sensor);

    /// <summary>Creates a simulated SHT3x reading its default temperature and humidity.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_sht3x_sim_part(byte address);

    /// <summary>Creates a simulated SHT3x that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_sht3x_sim_reporting(byte address, float celsius, float relativeHumidity);

    /// <summary>Creates an SCD4x driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_new(IntPtr bus, out IntPtr outSensor);

    /// <summary>Reads the SCD4x serial number and starts periodic measurement.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_init(IntPtr sensor);

    /// <summary>Waits for the next SCD4x periodic result and reads it.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_measure(IntPtr sensor, out PamojaScd4xMeasurement outMeasurement);

    /// <summary>Runs one on-demand SCD41 measurement.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_measure_single_shot(
        IntPtr sensor,
        out PamojaScd4xMeasurement outMeasurement);

    /// <summary>Asks an SCD4x whether a periodic result is waiting.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_poll_ready(
        IntPtr sensor,
        [MarshalAs(UnmanagedType.U1)] out bool outReady);

    /// <summary>Stops SCD4x periodic measurement.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_stop(IntPtr sensor);

    /// <summary>Starts SCD4x periodic measurement.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_start(IntPtr sensor);

    /// <summary>Sets the SCD4x temperature offset, in millidegrees.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_set_temperature_offset(IntPtr sensor, uint milliCelsius);

    /// <summary>Sets the altitude an SCD4x corrects for, in meters.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_set_sensor_altitude(IntPtr sensor, ushort meters);

    /// <summary>Reports the serial number an SCD4x driver read at initialization.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_serial(IntPtr sensor, out ulong outSerial);

    /// <summary>Releases an SCD4x driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_scd4x_free(IntPtr sensor);

    /// <summary>Creates a simulated SCD4x reading its default air.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_scd4x_sim_part();

    /// <summary>Creates a simulated SCD4x that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_scd4x_sim_reporting(ushort co2Ppm, float celsius, float relativeHumidity);

    /// <summary>Names a DS18B20 the kernel serves by its serial.</summary>
    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    public static partial PamojaStatus pamoja_ds18b20_thermometer_new(string serial, out IntPtr outThermometer);

    /// <summary>Names a DS18B20 by the path of its <c>w1_slave</c> file.</summary>
    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    public static partial PamojaStatus pamoja_ds18b20_thermometer_at(string path, out IntPtr outThermometer);

    /// <summary>Returns the path of the file a thermometer reads, as an owned string.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ds18b20_thermometer_path(IntPtr thermometer);

    /// <summary>
    /// Returns the serial in a thermometer's directory name as an owned string, or null when the
    /// file does not sit in a DS18B20's directory.
    /// </summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ds18b20_thermometer_serial(IntPtr thermometer);

    /// <summary>Reads and decodes a thermometer's file.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ds18b20_thermometer_read(
        IntPtr thermometer,
        out PamojaDs18b20Reading outReading);

    /// <summary>Releases a thermometer. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ds18b20_thermometer_free(IntPtr thermometer);

    /// <summary>Lists every DS18B20 the kernel has found under a directory, or the default one.</summary>
    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    public static partial PamojaStatus pamoja_ds18b20_discover(string? devices, out IntPtr outThermometers);

    /// <summary>Returns how many thermometers a list holds.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_ds18b20_thermometers_len(IntPtr thermometers);

    /// <summary>Copies one thermometer out of a list, or returns null.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ds18b20_thermometers_get(IntPtr thermometers, nuint index);
